--- a/next-auth/package.json
+++ b/next-auth/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.1.1",
     "bcrypt": "^6.0.0",
     "mongoose": "^8.16.1",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.0.17",
+    "resend": "^4.6.0",
     "zod": "^3.25.74"
   },
   "devDependencies": {
