--- a/next-auth/package.json
+++ b/next-auth/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/components": "^0.1.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.16.1",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
